--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,36 @@
 *.exe
 *.out
 *.app
+Lab_1/.vs/Lab_1/v16/.suo
+Lab_1/.vs/Lab_1/v16/Browse.VC.db
+Lab_1/.vs/Lab_1/v16/Browse.VC.opendb
+Lab_1/.vs/Lab_1/v16/ipch/AutoPCH/350b65d64a1fd760/LAB_1.ipch
+Lab_1/.vs/Lab_1/v16/ipch/AutoPCH/da4fcb04e046613b/LAB_1.ipch
+Lab_1/Debug/Lab_1.Build.CppClean.log
+Lab_1/Debug/Lab_1.ilk
+Lab_1/Debug/Lab_1.log
+Lab_1/Debug/Lab_1.pdb
+Lab_1/Debug/Lab_1.tlog/CL.command.1.tlog
+Lab_1/Debug/Lab_1.tlog/CL.read.1.tlog
+Lab_1/Debug/Lab_1.tlog/CL.write.1.tlog
+Lab_1/Debug/Lab_1.tlog/Lab_1.lastbuildstate
+Lab_1/Debug/Lab_1.tlog/link.command.1.tlog
+Lab_1/Debug/Lab_1.tlog/link.read.1.tlog
+Lab_1/Debug/Lab_1.tlog/link.write.1.tlog
+Lab_1/Debug/Lab_1.vcxproj.FileListAbsolute.txt
+Lab_1/Debug/vc142.idb
+Lab_1/Debug/vc142.pdb
+Lab_1/Lab_1.sln
+Lab_1/Lab_1.vcxproj.filters
+Lab_1/x64/Debug/Lab_1.ilk
+Lab_1/x64/Debug/Lab_1.log
+Lab_1/x64/Debug/Lab_1.pdb
+Lab_1/x64/Debug/Lab_1.tlog/CL.command.1.tlog
+Lab_1/x64/Debug/Lab_1.tlog/CL.read.1.tlog
+Lab_1/x64/Debug/Lab_1.tlog/CL.write.1.tlog
+Lab_1/x64/Debug/Lab_1.tlog/Lab_1.lastbuildstate
+Lab_1/x64/Debug/Lab_1.tlog/link.command.1.tlog
+Lab_1/x64/Debug/Lab_1.tlog/link.read.1.tlog
+Lab_1/x64/Debug/Lab_1.tlog/link.write.1.tlog
+Lab_1/x64/Debug/vc142.idb
+Lab_1/x64/Debug/vc142.pdb
