--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,22 @@ Lab_1/x64/Debug/Lab_1.tlog/link.read.1.tlog
 Lab_1/x64/Debug/Lab_1.tlog/link.write.1.tlog
 Lab_1/x64/Debug/vc142.idb
 Lab_1/x64/Debug/vc142.pdb
+Lab_2/.vs/Lab_2/v16/ipch/AutoPCH/3105a673d445d9c0/LAB_2.ipch
+Lab_2/.vs/Lab_2/v16/.suo
+Lab_2/.vs/Lab_2/v16/Browse.VC.db
+Lab_2/.vs/Lab_2/v16/Browse.VC.opendb
+Lab_2/Debug/Lab_2.ilk
+Lab_2/Debug/Lab_2.log
+Lab_2/Debug/Lab_2.pdb
+Lab_2/Debug/Lab_2.tlog/CL.command.1.tlog
+Lab_2/Debug/Lab_2.tlog/CL.read.1.tlog
+Lab_2/Debug/Lab_2.tlog/CL.write.1.tlog
+Lab_2/Debug/Lab_2.tlog/Lab_2.lastbuildstate
+Lab_2/Debug/Lab_2.tlog/link.command.1.tlog
+Lab_2/Debug/Lab_2.tlog/link.read.1.tlog
+Lab_2/Debug/Lab_2.tlog/link.write.1.tlog
+Lab_2/Debug/vc142.idb
+Lab_2/Debug/vc142.pdb
+Lab_2/Lab_2.vcxproj
+Lab_2/Lab_2.vcxproj.filters
+Lab_2/Lab_2.vcxproj.user
