--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,4 @@ Lab_2/Debug/vc142.pdb
 Lab_2/Lab_2.vcxproj
 Lab_2/Lab_2.vcxproj.filters
 Lab_2/Lab_2.vcxproj.user
+Lab_1/x64/Debug/Lab_1.Build.CppClean.log
