--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,15 @@ Lab_2/Debug/vc142.pdb
 Lab_2/Lab_2.vcxproj
 Lab_2/Lab_2.vcxproj.filters
 Lab_2/Lab_2.vcxproj.user
+Lab_1/.vs/Lab_1/v16/ipch/AutoPCH/14d091cc0878aadc/LAB_2.ipch
+Lab_1/x64/Debug/2/controllerProfiles/vJoyDevice_GamePad.txt
+Lab_1/x64/Debug/2/controllerProfiles/vJoyDevice_Pro.txt
+Lab_1/x64/Debug/2/controllerProfiles/vXBox_GamePad.txt
+Lab_1/x64/Debug/2/controllerProfiles/vXBox_Pro.txt
+Lab_1/x64/Debug/2/SavedKeyLists.ini
+Lab_1/x64/Debug/2/ScpVBus/scpvbus.cat
+Lab_1/x64/Debug/2/ScpVBus/ScpVBus.inf
+Lab_1/x64/Debug/2/ScpVBus/ScpVBus.sys
+Lab_1/x64/Debug/2/settings.ini
+Lab_1/x64/Debug/Lab_1.Build.CppClean.log
+Lab_1/x64/Debug/Lab_1.vcxproj.FileListAbsolute.txt
