--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,19 @@ Lab_1/x64/Debug/2/ScpVBus/ScpVBus.sys
 Lab_1/x64/Debug/2/settings.ini
 Lab_1/x64/Debug/Lab_1.Build.CppClean.log
 Lab_1/x64/Debug/Lab_1.vcxproj.FileListAbsolute.txt
+Lab_2/x64/Debug/Lab_2.Build.CppClean.log
+Lab_2/.vs/Lab_2/v16/ipch/AutoPCH/8148b1597e0c707b/LAB_2.ipch
+Lab_2/x64/Debug/Lab_2.ilk
+Lab_2/x64/Debug/Lab_2.log
+Lab_2/x64/Debug/lab_2.obj.enc
+Lab_2/x64/Debug/Lab_2.pdb
+Lab_2/x64/Debug/Lab_2.tlog/CL.command.1.tlog
+Lab_2/x64/Debug/Lab_2.tlog/CL.read.1.tlog
+Lab_2/x64/Debug/Lab_2.tlog/CL.write.1.tlog
+Lab_2/x64/Debug/Lab_2.tlog/Lab_2.lastbuildstate
+Lab_2/x64/Debug/Lab_2.tlog/link.command.1.tlog
+Lab_2/x64/Debug/Lab_2.tlog/link.read.1.tlog
+Lab_2/x64/Debug/Lab_2.tlog/link.write.1.tlog
+Lab_2/x64/Debug/Lab_2.vcxproj.FileListAbsolute.txt
+Lab_2/x64/Debug/vc142.idb
+Lab_2/x64/Debug/vc142.pdb
