--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,23 @@ Lab_2/x64/Debug/Lab_2.tlog/link.write.1.tlog
 Lab_2/x64/Debug/Lab_2.vcxproj.FileListAbsolute.txt
 Lab_2/x64/Debug/vc142.idb
 Lab_2/x64/Debug/vc142.pdb
+Lab_3/.vs/Lab_3/v16/.suo
+Lab_3/.vs/Lab_3/v16/Browse.VC.db
+Lab_3/.vs/Lab_3/v16/Browse.VC.opendb
+Lab_3/.vs/Lab_3/v16/ipch/AutoPCH/d1cddcab4e018b60/LAB_3.ipch
+Lab_3/Debug/Lab_3.ilk
+Lab_3/Debug/Lab_3.log
+Lab_3/Debug/Lab_3.pdb
+Lab_3/Debug/Lab_3.tlog/CL.command.1.tlog
+Lab_3/Debug/Lab_3.tlog/CL.read.1.tlog
+Lab_3/Debug/Lab_3.tlog/CL.write.1.tlog
+Lab_3/Debug/Lab_3.tlog/Lab_3.lastbuildstate
+Lab_3/Debug/Lab_3.tlog/link.command.1.tlog
+Lab_3/Debug/Lab_3.tlog/link.read.1.tlog
+Lab_3/Debug/Lab_3.tlog/link.write.1.tlog
+Lab_3/Debug/vc142.idb
+Lab_3/Debug/vc142.pdb
+Lab_3/Lab_3.sln
+Lab_3/Lab_3.vcxproj
+Lab_3/Lab_3.vcxproj.filters
+Lab_3/Lab_3.vcxproj.user
