--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,10 @@ Lab_3/Lab_3.sln
 Lab_3/Lab_3.vcxproj
 Lab_3/Lab_3.vcxproj.filters
 Lab_3/Lab_3.vcxproj.user
+lab-4/.vs/lab-4/v16/Browse.VC.db
+lab-4/.vs/lab-4/v16/Browse.VC.opendb
+lab-4/.vs/lab-4/v16/ipch/AutoPCH/853c4291c52ba840/LAB-4.ipch
+lab-4/lab-4.sln
+lab-4/lab-4.vcxproj
+lab-4/lab-4.vcxproj.filters
+lab-4/lab-4.vcxproj.user
