--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,18 @@ lab-4/lab-4.sln
 lab-4/lab-4.vcxproj
 lab-4/lab-4.vcxproj.filters
 lab-4/lab-4.vcxproj.user
+lab-4/.vs/lab-4/v16/.suo
+lab-4/Debug/lab-4.Build.CppClean.log
+lab-4/Debug/lab-4.ilk
+lab-4/Debug/lab-4.log
+lab-4/Debug/lab-4.pdb
+lab-4/Debug/lab-4.tlog/CL.command.1.tlog
+lab-4/Debug/lab-4.tlog/CL.read.1.tlog
+lab-4/Debug/lab-4.tlog/CL.write.1.tlog
+lab-4/Debug/lab-4.tlog/lab-4.lastbuildstate
+lab-4/Debug/lab-4.tlog/link.command.1.tlog
+lab-4/Debug/lab-4.tlog/link.read.1.tlog
+lab-4/Debug/lab-4.tlog/link.write.1.tlog
+lab-4/Debug/lab-4.vcxproj.FileListAbsolute.txt
+lab-4/Debug/vc142.idb
+lab-4/Debug/vc142.pdb
