Add 3 class: Data, User, book

--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,17 @@ lab-4/Debug/lab-4.tlog/link.write.1.tlog
 lab-4/Debug/lab-4.vcxproj.FileListAbsolute.txt
 lab-4/Debug/vc142.idb
 lab-4/Debug/vc142.pdb
+Course/.vs/Course/v16/Browse.VC.db
+Course/.vs/Course/v16/Browse.VC.opendb
+Course/.vs/Course/v16/ipch/AutoPCH/32cd013b7d4db787/USER.ipch
+Course/.vs/Course/v16/ipch/AutoPCH/4c2d6fed01d2cf84/USER.ipch
+Course/.vs/Course/v16/ipch/AutoPCH/a0492e7cbd6f93c4/BOOK.ipch
+Course/.vs/Course/v16/ipch/AutoPCH/fa4109f374df407d/DATA.ipch
+Course/.vs/Course/v16/ipch/AutoPCH/f455ec1ef4f61d68/MAINFORM.ipch
+Course/.vs/Course/v16/ipch/AutoPCH/f455ec1ef4f61d68/MAINFORM.ipch
+Course/.vs/Course/v16/ipch/AutoPCH/a0492e7cbd6f93c4/BOOK.ipch
+Course/.vs/Course/v16/ipch/AutoPCH/32cd013b7d4db787/USER.ipch
+Course/.vs/Course/v16/Browse.VC.opendb
+Course/.vs/Course/v16/Browse.VC.db
+Course/.vs/Course/v16/.suo
+Course/.vs/Course/v16/ipch/AutoPCH/fa4109f374df407d/DATA.ipch
