--- a/Course/Course.vcxproj
+++ b/Course/Course.vcxproj
@@ -138,6 +138,11 @@
   <ItemGroup>
     <Image Include="bitmap1.bmp" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.h</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
