--- a/.gitignore
+++ b/.gitignore
@@ -282,3 +282,25 @@ Course/Debug/Course.vcxprojAssemblyReference.cache
 Course/Debug/vc142.pdb
 Course/.vs/Course/v16/.suo
 Course/.vs/Course/v16/Browse.VC.db
+Course/.vs/Course/v16/ipch/AutoPCH/a0492e7cbd6f93c4/BOOK.ipch
+Course/.vs/Course/v16/.suo
+Course/.vs/Course/v16/Browse.VC.db
+*.opendb
+Course/.vs/Course/v16/ipch/AutoPCH/32cd013b7d4db787/USER.ipch
+Course/.vs/Course/v16/ipch/AutoPCH/a0492e7cbd6f93c4/BOOK.ipch
+*.ipch
+Course/.vs/Course/v16/ipch/AutoPCH/f455ec1ef4f61d68/MAINFORM.ipch
+Course/.vs/Course/v16/ipch/AutoPCH/fa4109f374df407d/DATA.ipch
+Course/Debug/Course.exe.metagen
+Course/Debug/Course.log
+*.tlog
+Course/Debug/Course.tlog/CL.command.1.tlog
+Course/Debug/Course.tlog/CL.read.1.tlog
+Course/Debug/Course.tlog/CL.write.1.tlog
+Course/Debug/Course.tlog/link.command.1.tlog
+Course/Debug/Course.tlog/link.read.1.tlog
+Course/Debug/Course.tlog/link.write.1.tlog
+Course/Debug/Course.vcxprojAssemblyReference.cache
+Course/Debug/vc142.pdb
+*.pdb
+*.cache
