--- a/.gitignore
+++ b/.gitignore
@@ -1,179 +1,14 @@
-# Prerequisites
-*.d
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
-Lab_1/.vs/Lab_1/v16/.suo
-Lab_1/.vs/Lab_1/v16/Browse.VC.db
-Lab_1/.vs/Lab_1/v16/Browse.VC.opendb
-Lab_1/.vs/Lab_1/v16/ipch/AutoPCH/350b65d64a1fd760/LAB_1.ipch
-Lab_1/.vs/Lab_1/v16/ipch/AutoPCH/da4fcb04e046613b/LAB_1.ipch
-Lab_1/Debug/Lab_1.Build.CppClean.log
-Lab_1/Debug/Lab_1.ilk
-Lab_1/Debug/Lab_1.log
-Lab_1/Debug/Lab_1.pdb
-Lab_1/Debug/Lab_1.tlog/CL.command.1.tlog
-Lab_1/Debug/Lab_1.tlog/CL.read.1.tlog
-Lab_1/Debug/Lab_1.tlog/CL.write.1.tlog
-Lab_1/Debug/Lab_1.tlog/Lab_1.lastbuildstate
-Lab_1/Debug/Lab_1.tlog/link.command.1.tlog
-Lab_1/Debug/Lab_1.tlog/link.read.1.tlog
-Lab_1/Debug/Lab_1.tlog/link.write.1.tlog
-Lab_1/Debug/Lab_1.vcxproj.FileListAbsolute.txt
-Lab_1/Debug/vc142.idb
-Lab_1/Debug/vc142.pdb
-Lab_1/Lab_1.sln
-Lab_1/Lab_1.vcxproj.filters
-Lab_1/x64/Debug/Lab_1.ilk
-Lab_1/x64/Debug/Lab_1.log
-Lab_1/x64/Debug/Lab_1.pdb
-Lab_1/x64/Debug/Lab_1.tlog/CL.command.1.tlog
-Lab_1/x64/Debug/Lab_1.tlog/CL.read.1.tlog
-Lab_1/x64/Debug/Lab_1.tlog/CL.write.1.tlog
-Lab_1/x64/Debug/Lab_1.tlog/Lab_1.lastbuildstate
-Lab_1/x64/Debug/Lab_1.tlog/link.command.1.tlog
-Lab_1/x64/Debug/Lab_1.tlog/link.read.1.tlog
-Lab_1/x64/Debug/Lab_1.tlog/link.write.1.tlog
-Lab_1/x64/Debug/vc142.idb
-Lab_1/x64/Debug/vc142.pdb
-Lab_2/.vs/Lab_2/v16/ipch/AutoPCH/3105a673d445d9c0/LAB_2.ipch
-Lab_2/.vs/Lab_2/v16/.suo
-Lab_2/.vs/Lab_2/v16/Browse.VC.db
-Lab_2/.vs/Lab_2/v16/Browse.VC.opendb
-Lab_2/Debug/Lab_2.ilk
-Lab_2/Debug/Lab_2.log
-Lab_2/Debug/Lab_2.pdb
-Lab_2/Debug/Lab_2.tlog/CL.command.1.tlog
-Lab_2/Debug/Lab_2.tlog/CL.read.1.tlog
-Lab_2/Debug/Lab_2.tlog/CL.write.1.tlog
-Lab_2/Debug/Lab_2.tlog/Lab_2.lastbuildstate
-Lab_2/Debug/Lab_2.tlog/link.command.1.tlog
-Lab_2/Debug/Lab_2.tlog/link.read.1.tlog
-Lab_2/Debug/Lab_2.tlog/link.write.1.tlog
-Lab_2/Debug/vc142.idb
-Lab_2/Debug/vc142.pdb
-Lab_2/Lab_2.vcxproj
-Lab_2/Lab_2.vcxproj.filters
-Lab_2/Lab_2.vcxproj.user
-Lab_1/.vs/Lab_1/v16/ipch/AutoPCH/14d091cc0878aadc/LAB_2.ipch
-Lab_1/x64/Debug/2/controllerProfiles/vJoyDevice_GamePad.txt
-Lab_1/x64/Debug/2/controllerProfiles/vJoyDevice_Pro.txt
-Lab_1/x64/Debug/2/controllerProfiles/vXBox_GamePad.txt
-Lab_1/x64/Debug/2/controllerProfiles/vXBox_Pro.txt
-Lab_1/x64/Debug/2/SavedKeyLists.ini
-Lab_1/x64/Debug/2/ScpVBus/scpvbus.cat
-Lab_1/x64/Debug/2/ScpVBus/ScpVBus.inf
-Lab_1/x64/Debug/2/ScpVBus/ScpVBus.sys
-Lab_1/x64/Debug/2/settings.ini
-Lab_1/x64/Debug/Lab_1.Build.CppClean.log
-Lab_1/x64/Debug/Lab_1.vcxproj.FileListAbsolute.txt
-Lab_2/x64/Debug/Lab_2.Build.CppClean.log
-Lab_2/.vs/Lab_2/v16/ipch/AutoPCH/8148b1597e0c707b/LAB_2.ipch
-Lab_2/x64/Debug/Lab_2.ilk
-Lab_2/x64/Debug/Lab_2.log
-Lab_2/x64/Debug/lab_2.obj.enc
-Lab_2/x64/Debug/Lab_2.pdb
-Lab_2/x64/Debug/Lab_2.tlog/CL.command.1.tlog
-Lab_2/x64/Debug/Lab_2.tlog/CL.read.1.tlog
-Lab_2/x64/Debug/Lab_2.tlog/CL.write.1.tlog
-Lab_2/x64/Debug/Lab_2.tlog/Lab_2.lastbuildstate
-Lab_2/x64/Debug/Lab_2.tlog/link.command.1.tlog
-Lab_2/x64/Debug/Lab_2.tlog/link.read.1.tlog
-Lab_2/x64/Debug/Lab_2.tlog/link.write.1.tlog
-Lab_2/x64/Debug/Lab_2.vcxproj.FileListAbsolute.txt
-Lab_2/x64/Debug/vc142.idb
-Lab_2/x64/Debug/vc142.pdb
-Lab_3/.vs/Lab_3/v16/.suo
-Lab_3/.vs/Lab_3/v16/Browse.VC.db
-Lab_3/.vs/Lab_3/v16/Browse.VC.opendb
-Lab_3/.vs/Lab_3/v16/ipch/AutoPCH/d1cddcab4e018b60/LAB_3.ipch
-Lab_3/Debug/Lab_3.ilk
-Lab_3/Debug/Lab_3.log
-Lab_3/Debug/Lab_3.pdb
-Lab_3/Debug/Lab_3.tlog/CL.command.1.tlog
-Lab_3/Debug/Lab_3.tlog/CL.read.1.tlog
-Lab_3/Debug/Lab_3.tlog/CL.write.1.tlog
-Lab_3/Debug/Lab_3.tlog/Lab_3.lastbuildstate
-Lab_3/Debug/Lab_3.tlog/link.command.1.tlog
-Lab_3/Debug/Lab_3.tlog/link.read.1.tlog
-Lab_3/Debug/Lab_3.tlog/link.write.1.tlog
-Lab_3/Debug/vc142.idb
-Lab_3/Debug/vc142.pdb
-Lab_3/Lab_3.sln
-Lab_3/Lab_3.vcxproj
-Lab_3/Lab_3.vcxproj.filters
-Lab_3/Lab_3.vcxproj.user
-lab-4/.vs/lab-4/v16/Browse.VC.db
-lab-4/.vs/lab-4/v16/Browse.VC.opendb
-lab-4/.vs/lab-4/v16/ipch/AutoPCH/853c4291c52ba840/LAB-4.ipch
-lab-4/lab-4.sln
-lab-4/lab-4.vcxproj
-lab-4/lab-4.vcxproj.filters
-lab-4/lab-4.vcxproj.user
-lab-4/.vs/lab-4/v16/.suo
-lab-4/Debug/lab-4.Build.CppClean.log
-lab-4/Debug/lab-4.ilk
-lab-4/Debug/lab-4.log
-lab-4/Debug/lab-4.pdb
-lab-4/Debug/lab-4.tlog/CL.command.1.tlog
-lab-4/Debug/lab-4.tlog/CL.read.1.tlog
-lab-4/Debug/lab-4.tlog/CL.write.1.tlog
-lab-4/Debug/lab-4.tlog/lab-4.lastbuildstate
-lab-4/Debug/lab-4.tlog/link.command.1.tlog
-lab-4/Debug/lab-4.tlog/link.read.1.tlog
-lab-4/Debug/lab-4.tlog/link.write.1.tlog
-lab-4/Debug/lab-4.vcxproj.FileListAbsolute.txt
-lab-4/Debug/vc142.idb
-lab-4/Debug/vc142.pdb
+Course/.vs/Course/v16/.suo
 Course/.vs/Course/v16/Browse.VC.db
 Course/.vs/Course/v16/Browse.VC.opendb
 Course/.vs/Course/v16/ipch/AutoPCH/32cd013b7d4db787/USER.ipch
 Course/.vs/Course/v16/ipch/AutoPCH/4c2d6fed01d2cf84/USER.ipch
 Course/.vs/Course/v16/ipch/AutoPCH/a0492e7cbd6f93c4/BOOK.ipch
-Course/.vs/Course/v16/ipch/AutoPCH/fa4109f374df407d/DATA.ipch
-Course/.vs/Course/v16/ipch/AutoPCH/f455ec1ef4f61d68/MAINFORM.ipch
-Course/.vs/Course/v16/ipch/AutoPCH/f455ec1ef4f61d68/MAINFORM.ipch
-Course/.vs/Course/v16/ipch/AutoPCH/a0492e7cbd6f93c4/BOOK.ipch
-Course/.vs/Course/v16/ipch/AutoPCH/32cd013b7d4db787/USER.ipch
-Course/.vs/Course/v16/Browse.VC.opendb
-Course/.vs/Course/v16/Browse.VC.db
-Course/.vs/Course/v16/.suo
-Course/.vs/Course/v16/ipch/AutoPCH/fa4109f374df407d/DATA.ipch
-Course/.vs/Course/v16/Browse.VC.db
-Course/.vs/Course/v16/.suo
-Course/.vs/Course/v16/Browse.VC.db
-Course/.vs/Course/v16/Browse.VC.opendb
-Course/.vs/Course/v16/ipch/AutoPCH/32cd013b7d4db787/USER.ipch
-Course/.vs/Course/v16/ipch/AutoPCH/a0492e7cbd6f93c4/BOOK.ipch
 Course/.vs/Course/v16/ipch/AutoPCH/f455ec1ef4f61d68/MAINFORM.ipch
 Course/.vs/Course/v16/ipch/AutoPCH/fa4109f374df407d/DATA.ipch
+Course/Debug/.NETFramework,Version=v4.6.AssemblyAttributes.obj
+Course/Debug/Book.obj
 Course/Debug/Course.exe.metagen
 Course/Debug/Course.log
 Course/Debug/Course.MainForm.resources
@@ -189,118 +24,80 @@ Course/Debug/Course.tlog/link.read.1.tlog
 Course/Debug/Course.tlog/link.write.1.tlog
 Course/Debug/Course.vcxproj.GenerateResource.cache
 Course/Debug/Course.vcxprojAssemblyReference.cache
+Course/Debug/Data.obj
+Course/Debug/MainForm.obj
+Course/Debug/User.obj
 Course/Debug/vc142.pdb
-Course/.vs/Course/v16/.suo
-Course/.vs/Course/v16/Browse.VC.db
-Course/.vs/Course/v16/Browse.VC.opendb
-Course/.vs/Course/v16/ipch/AutoPCH/32cd013b7d4db787/USER.ipch
-Course/.vs/Course/v16/ipch/AutoPCH/a0492e7cbd6f93c4/BOOK.ipch
-Course/.vs/Course/v16/ipch/AutoPCH/f455ec1ef4f61d68/MAINFORM.ipch
-Course/.vs/Course/v16/ipch/AutoPCH/fa4109f374df407d/DATA.ipch
-Course/Debug/Course.exe.metagen
-Course/Debug/Course.log
-Course/Debug/Course.pdb
-Course/Debug/Course.tlog/CL.command.1.tlog
-Course/Debug/Course.tlog/CL.read.1.tlog
-Course/Debug/Course.tlog/CL.write.1.tlog
-Course/Debug/Course.tlog/link.command.1.tlog
-Course/Debug/Course.tlog/link.read.1.tlog
-Course/Debug/Course.tlog/link.write.1.tlog
-Course/Debug/Course.vcxprojAssemblyReference.cache
-Course/Debug/vc142.pdb
-Course/.vs/Course/v16/.suo
-Course/.vs/Course/v16/Browse.VC.db
-Course/.vs/Course/v16/Browse.VC.opendb
-Course/.vs/Course/v16/ipch/AutoPCH/32cd013b7d4db787/USER.ipch
-Course/.vs/Course/v16/ipch/AutoPCH/a0492e7cbd6f93c4/BOOK.ipch
-Course/.vs/Course/v16/ipch/AutoPCH/f455ec1ef4f61d68/MAINFORM.ipch
-Course/.vs/Course/v16/ipch/AutoPCH/fa4109f374df407d/DATA.ipch
-Course/Debug/Course.exe.metagen
-Course/Debug/Course.log
-Course/Debug/Course.pdb
-Course/Debug/Course.tlog/CL.command.1.tlog
-Course/Debug/Course.tlog/CL.read.1.tlog
-Course/Debug/Course.tlog/CL.write.1.tlog
-Course/Debug/Course.tlog/link.command.1.tlog
-Course/Debug/Course.tlog/link.read.1.tlog
-Course/Debug/Course.tlog/link.write.1.tlog
-Course/Debug/Course.vcxprojAssemblyReference.cache
-Course/Debug/vc142.pdb
-Course/.vs/Course/v16/.suo
-Course/.vs/Course/v16/Browse.VC.db
-Course/.vs/Course/v16/Browse.VC.opendb
-Course/.vs/Course/v16/ipch/AutoPCH/32cd013b7d4db787/USER.ipch
-Course/.vs/Course/v16/ipch/AutoPCH/a0492e7cbd6f93c4/BOOK.ipch
-Course/.vs/Course/v16/ipch/AutoPCH/f455ec1ef4f61d68/MAINFORM.ipch
-Course/.vs/Course/v16/ipch/AutoPCH/fa4109f374df407d/DATA.ipch
-Course/Debug/Course.exe.metagen
-Course/Debug/Course.log
-Course/Debug/Course.pdb
-Course/Debug/Course.tlog/CL.command.1.tlog
-Course/Debug/Course.tlog/CL.read.1.tlog
-Course/Debug/Course.tlog/CL.write.1.tlog
-Course/Debug/Course.tlog/link.command.1.tlog
-Course/Debug/Course.tlog/link.read.1.tlog
-Course/Debug/Course.tlog/link.write.1.tlog
-Course/Debug/Course.vcxprojAssemblyReference.cache
-Course/Debug/vc142.pdb
-Course/.vs/Course/v16/.suo
-Course/.vs/Course/v16/Browse.VC.db
-Course/.vs/Course/v16/Browse.VC.opendb
-Course/.vs/Course/v16/ipch/AutoPCH/32cd013b7d4db787/USER.ipch
-Course/.vs/Course/v16/ipch/AutoPCH/a0492e7cbd6f93c4/BOOK.ipch
-Course/.vs/Course/v16/ipch/AutoPCH/f455ec1ef4f61d68/MAINFORM.ipch
-Course/.vs/Course/v16/ipch/AutoPCH/fa4109f374df407d/DATA.ipch
-Course/Debug/Course.exe.metagen
-Course/Debug/Course.log
-Course/Debug/Course.pdb
-Course/Debug/Course.tlog/CL.command.1.tlog
-Course/Debug/Course.tlog/CL.read.1.tlog
-Course/Debug/Course.tlog/CL.write.1.tlog
-Course/Debug/Course.tlog/link.command.1.tlog
-Course/Debug/Course.tlog/link.read.1.tlog
-Course/Debug/Course.tlog/link.write.1.tlog
-Course/Debug/Course.vcxprojAssemblyReference.cache
-Course/Debug/vc142.pdb
-Course/.vs/Course/v16/.suo
-Course/.vs/Course/v16/Browse.VC.db
-Course/.vs/Course/v16/Browse.VC.opendb
-Course/.vs/Course/v16/ipch/AutoPCH/32cd013b7d4db787/USER.ipch
-Course/.vs/Course/v16/ipch/AutoPCH/a0492e7cbd6f93c4/BOOK.ipch
-Course/.vs/Course/v16/ipch/AutoPCH/f455ec1ef4f61d68/MAINFORM.ipch
-Course/.vs/Course/v16/ipch/AutoPCH/fa4109f374df407d/DATA.ipch
-Course/Debug/Course.exe.metagen
-Course/Debug/Course.log
-Course/Debug/Course.pdb
-Course/Debug/Course.tlog/CL.command.1.tlog
-Course/Debug/Course.tlog/CL.read.1.tlog
-Course/Debug/Course.tlog/CL.write.1.tlog
-Course/Debug/Course.tlog/link.command.1.tlog
-Course/Debug/Course.tlog/link.read.1.tlog
-Course/Debug/Course.tlog/link.write.1.tlog
-Course/Debug/Course.vcxprojAssemblyReference.cache
-Course/Debug/vc142.pdb
-Course/.vs/Course/v16/.suo
-Course/.vs/Course/v16/Browse.VC.db
-Course/.vs/Course/v16/ipch/AutoPCH/a0492e7cbd6f93c4/BOOK.ipch
-Course/.vs/Course/v16/.suo
-Course/.vs/Course/v16/Browse.VC.db
-*.opendb
-Course/.vs/Course/v16/ipch/AutoPCH/32cd013b7d4db787/USER.ipch
-Course/.vs/Course/v16/ipch/AutoPCH/a0492e7cbd6f93c4/BOOK.ipch
-*.ipch
-Course/.vs/Course/v16/ipch/AutoPCH/f455ec1ef4f61d68/MAINFORM.ipch
-Course/.vs/Course/v16/ipch/AutoPCH/fa4109f374df407d/DATA.ipch
-Course/Debug/Course.exe.metagen
-Course/Debug/Course.log
-*.tlog
-Course/Debug/Course.tlog/CL.command.1.tlog
-Course/Debug/Course.tlog/CL.read.1.tlog
-Course/Debug/Course.tlog/CL.write.1.tlog
-Course/Debug/Course.tlog/link.command.1.tlog
-Course/Debug/Course.tlog/link.read.1.tlog
-Course/Debug/Course.tlog/link.write.1.tlog
-Course/Debug/Course.vcxprojAssemblyReference.cache
-Course/Debug/vc142.pdb
-*.pdb
-*.cache
+lab-4/Debug/lab-4.exe
+lab-4/Debug/lab-4.obj
+Lab_1/.vs/Lab_1/v16/.suo
+Lab_1/.vs/Lab_1/v16/Browse.VC.db
+Lab_1/.vs/Lab_1/v16/ipch/AutoPCH/14d091cc0878aadc/LAB_2.ipch
+Lab_1/.vs/Lab_1/v16/ipch/AutoPCH/350b65d64a1fd760/LAB_1.ipch
+Lab_1/.vs/Lab_1/v16/ipch/AutoPCH/da4fcb04e046613b/LAB_1.ipch
+Lab_1/Debug/Lab_1.Build.CppClean.log
+Lab_1/Debug/Lab_1.exe
+Lab_1/Debug/Lab_1.ilk
+Lab_1/Debug/Lab_1.log
+Lab_1/Debug/Lab_1.obj
+Lab_1/Debug/Lab_1.pdb
+Lab_1/Debug/Lab_1.tlog/CL.command.1.tlog
+Lab_1/Debug/Lab_1.tlog/CL.read.1.tlog
+Lab_1/Debug/Lab_1.tlog/CL.write.1.tlog
+Lab_1/Debug/Lab_1.tlog/Lab_1.lastbuildstate
+Lab_1/Debug/Lab_1.tlog/link.command.1.tlog
+Lab_1/Debug/Lab_1.tlog/link.read.1.tlog
+Lab_1/Debug/Lab_1.tlog/link.write.1.tlog
+Lab_1/Debug/Lab_1.vcxproj.FileListAbsolute.txt
+Lab_1/Debug/vc142.idb
+Lab_1/Debug/vc142.pdb
+Lab_1/Lab_1.sln
+Lab_1/Lab_1.vcxproj.filters
+Lab_1/x64/Debug/2/controllerProfiles/vJoyDevice_GamePad.txt
+Lab_1/x64/Debug/2/controllerProfiles/vJoyDevice_Pro.txt
+Lab_1/x64/Debug/2/controllerProfiles/vXBox_GamePad.txt
+Lab_1/x64/Debug/2/controllerProfiles/vXBox_Pro.txt
+Lab_1/x64/Debug/2/mouse2joystick_Custom_CEMU.exe
+Lab_1/x64/Debug/2/SavedKeyLists.ini
+Lab_1/x64/Debug/2/ScpVBus/devcon.exe
+Lab_1/x64/Debug/2/ScpVBus/scpvbus.cat
+Lab_1/x64/Debug/2/ScpVBus/ScpVBus.inf
+Lab_1/x64/Debug/2/ScpVBus/ScpVBus.sys
+Lab_1/x64/Debug/2/ScpVBus/WdfCoinstaller01009.dll
+Lab_1/x64/Debug/2/settings.ini
+Lab_1/x64/Debug/Lab_1.ilk
+Lab_1/x64/Debug/Lab_1.log
+Lab_1/x64/Debug/Lab_1.obj
+Lab_1/x64/Debug/Lab_1.pdb
+Lab_1/x64/Debug/Lab_1.tlog/CL.command.1.tlog
+Lab_1/x64/Debug/Lab_1.tlog/CL.read.1.tlog
+Lab_1/x64/Debug/Lab_1.tlog/CL.write.1.tlog
+Lab_1/x64/Debug/Lab_1.tlog/Lab_1.lastbuildstate
+Lab_1/x64/Debug/Lab_1.tlog/link.command.1.tlog
+Lab_1/x64/Debug/Lab_1.tlog/link.read.1.tlog
+Lab_1/x64/Debug/Lab_1.tlog/link.write.1.tlog
+Lab_1/x64/Debug/Lab_1.vcxproj.FileListAbsolute.txt
+Lab_1/x64/Debug/vc142.idb
+Lab_1/x64/Debug/vc142.pdb
+Lab_2/.vs/Lab_2/v16/.suo
+Lab_2/.vs/Lab_2/v16/Browse.VC.db
+Lab_2/.vs/Lab_2/v16/ipch/AutoPCH/3105a673d445d9c0/LAB_2.ipch
+Lab_2/Debug/Lab_2.ilk
+Lab_2/Debug/Lab_2.log
+Lab_2/Debug/Lab_2.obj
+Lab_2/Debug/Lab_2.pdb
+Lab_2/Debug/Lab_2.tlog/CL.command.1.tlog
+Lab_2/Debug/Lab_2.tlog/CL.read.1.tlog
+Lab_2/Debug/Lab_2.tlog/CL.write.1.tlog
+Lab_2/Debug/Lab_2.tlog/Lab_2.lastbuildstate
+Lab_2/Debug/Lab_2.tlog/link.command.1.tlog
+Lab_2/Debug/Lab_2.tlog/link.read.1.tlog
+Lab_2/Debug/Lab_2.tlog/link.write.1.tlog
+Lab_2/Debug/vc142.idb
+Lab_2/Debug/vc142.pdb
+Lab_2/Lab_2.vcxproj
+Lab_2/Lab_2.vcxproj.filters
+Lab_2/Lab_2.vcxproj.user
+Lab_2/x64/Debug/Lab_2.obj
+Lab_2/x64/Debug/Lab_2.vcxproj.FileListAbsolute.txt
+Lab_3/Debug/Lab_3.obj
