--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,4 @@ Lab_2/Lab_2.vcxproj.user
 Lab_2/x64/Debug/Lab_2.obj
 Lab_2/x64/Debug/Lab_2.vcxproj.FileListAbsolute.txt
 Lab_3/Debug/Lab_3.obj
+*.ipch
