--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,62 @@ Lab_2/x64/Debug/Lab_2.obj
 Lab_2/x64/Debug/Lab_2.vcxproj.FileListAbsolute.txt
 Lab_3/Debug/Lab_3.obj
 *.ipch
+Course/.vs/Course/v16/.suo
+Course/.vs/Course/v16/Browse.VC.db
+Course/.vs/Course/v16/Browse.VC.opendb
+Course/.vs/Course/v16/ipch/AutoPCH/a0492e7cbd6f93c4/BOOK.ipch
+Course/.vs/Course/v16/ipch/AutoPCH/f455ec1ef4f61d68/MAINFORM.ipch
+Course/.vs/Course/v16/ipch/AutoPCH/fa4109f374df407d/DATA.ipch
+Course/Debug/Course.Build.CppClean.log
+Course/Debug/Course.exe.metagen
+Course/Debug/Course.LK_admin.resources
+Course/Debug/Course.log
+Course/Debug/Course.pdb
+Course/Debug/Course.res
+Course/Debug/Course.tlog/CL.command.1.tlog
+Course/Debug/Course.tlog/CL.read.1.tlog
+Course/Debug/Course.tlog/CL.write.1.tlog
+Course/Debug/Course.tlog/link.11732.delete.1.tlog
+Course/Debug/Course.tlog/link.6220.delete.1.tlog
+Course/Debug/Course.tlog/link.8268.delete.1.tlog
+Course/Debug/Course.tlog/link.command.1.tlog
+Course/Debug/Course.tlog/link.read.1.tlog
+Course/Debug/Course.tlog/link.write.1.tlog
+Course/Debug/Course.tlog/rc.read.1.tlog
+Course/Debug/Course.vcxproj.FileListAbsolute.txt
+Course/Debug/Course.vcxprojAssemblyReference.cache
+Course/Debug/LK_admin.obj
+Course/Debug/RCa05748
+Course/Debug/vc142.pdb
+Course/x64/Debug/.NETFramework,Version=4.7.1.AssemblyAttributes.asm
+Course/x64/Debug/.NETFramework,Version=4.7.1.AssemblyAttributes.obj
+Course/x64/Debug/Book.obj
+Course/x64/Debug/Course.Build.CppClean.log
+Course/x64/Debug/Course.exe.metagen
+Course/x64/Debug/Course.LK_admin.resources
+Course/x64/Debug/Course.log
+Course/x64/Debug/Course.pdb
+Course/x64/Debug/Course.res
+Course/x64/Debug/Course.tlog/CL.command.1.tlog
+Course/x64/Debug/Course.tlog/CL.read.1.tlog
+Course/x64/Debug/Course.tlog/CL.write.1.tlog
+Course/x64/Debug/Course.tlog/Course.lastbuildstate
+Course/x64/Debug/Course.tlog/Course.read.1u.tlog
+Course/x64/Debug/Course.tlog/Course.write.1u.tlog
+Course/x64/Debug/Course.tlog/link.command.1.tlog
+Course/x64/Debug/Course.tlog/link.read.1.tlog
+Course/x64/Debug/Course.tlog/link.write.1.tlog
+Course/x64/Debug/Course.tlog/metagen.read.1.tlog
+Course/x64/Debug/Course.tlog/metagen.write.1.tlog
+Course/x64/Debug/Course.tlog/rc.command.1.tlog
+Course/x64/Debug/Course.tlog/rc.read.1.tlog
+Course/x64/Debug/Course.tlog/rc.write.1.tlog
+Course/x64/Debug/Course.tlog/SYSTEM.DATA.SQLITE.DLL.metagen
+Course/x64/Debug/Course.vcxproj.CopyComplete
+Course/x64/Debug/Course.vcxproj.FileListAbsolute.txt
+Course/x64/Debug/Course.vcxproj.GenerateResource.cache
+Course/x64/Debug/Course.vcxprojAssemblyReference.cache
+Course/x64/Debug/Data.obj
+Course/x64/Debug/db.obj
+Course/x64/Debug/Func.obj
+Course/x64/Debug/LK_admin.obj
